--- a/index.html
+++ b/index.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
-<html lang="hi">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>IR Class Website</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>IR Assignment Sharing Website</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: #004466;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      margin: 0;
+    }
+
+    main {
+      padding: 30px;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    .assignments {
+      margin-top: 20px;
+    }
+
+    .assignments ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    .assignments li {
+      background: #e0f0ff;
+      margin: 10px 0;
+      padding: 12px;
+      border-radius: 5px;
+    }
+
+    .assignments a {
+      text-decoration: none;
+      color: #004466;
+      font-weight: bold;
+    }
+
+    footer {
+      text-align: center;
+      padding: 15px;
+      background-color: #ddd;
+      margin-top: 40px;
+    }
+  </style>
 </head>
 <body>
-  <h1>स्वागत है IR Class Website पर</h1>
-  <p>यहाँ हम सभी अपने assignments और work share कर सकते हैं।</p>
+
+<header>
+  <h1>IR Assignment Sharing Website</h1>
+  <p>Welcome to the IR Class Portal</p>
+</header>
+
+<main>
+  <section class="assignments">
+    <h2>Available Assignments 📚</h2>
+    <ul>
+      <li><a href="assignment1.pdf" target="_blank">Assignment 1 – IR Basics</a></li>
+      <li><a href="assignment2.pdf" target="_blank">Assignment 2 – Web Crawling</a></li>
+      <li><a href="project-guidelines.pdf" target="_blank">Project Guidelines</a></li>
+    </ul>
+  </section>
+</main>
+
+<footer>
+  © 2025 IR Class | Maintained by Nikita Jha
+</footer>
+
 </body>
 </html>
