--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     header {
       background-color: #004466;
-      color: white;
+      color: blue;
       padding: 20px;
       text-align: center;
     }
